# NativeHttps

./: .gitignore  README.md  build.gradle  gradle.properties
app/: .gitignore  CMakeLists.txt  build.gradle  signing.properties
app/jni/libcurl/: Android.mk  Application.mk  CMakeLists.txt
app/jni/libcurl/include/curl/: curl.h  curlbuild.h
app/jni/libcurl/lib/: cookie.h  curl_addrinfo.c  curl_addrinfo.h  curl_config.h  curl_config.h.cmake  curl_setup.h  curl_setup_once.h  hostip4.c  imap.c  imap.h  pingpong.c  pingpong.h  splay.c  splay.h  strdup.h  tftp.c  transfer.h
app/jni/libcurl/lib/vtls/: darwinssl.c  polarssl_threadlock.c  vtls.h
app/jni/libcurl/openssl/: ssl3.h  tls1.h
app/jni/libjsoncpp/: CMakeLists.txt  json.h  jsoncpp.cpp
app/jni/libopenssl/: CMakeLists.txt
app/jni/libopenssl/crypto/: CMakeLists.txt
app/jni/libopenssl/ssl/: CMakeLists.txt
app/jni/libprotobuf/: CMakeLists.txt
app/jni/libprotobuf/google/protobuf/stubs/: common.cc
app/jni/libprotobuf/include/: testInc.h
app/jni/libzbar/: CMakeLists.txt
app/jni/libzbar/iconv/: CMakeLists.txt
app/jni/libzbar/iconv/libcharset/: CMakeLists.txt
app/jni/libzbar/iconv/libcharset/lib/: localcharset.c
app/jni/libzbar/iconv/src/: iconv.c
app/jni/libzbar/zbar/: CMakeLists.txt  config.c  convert.c  decoder.c  decoder.h  error.c  error.h  image.c  image.h  img_scanner.c  mutex.h  refcnt.h  scanner.c  symbol.c  video.h  window.h
app/jni/libzbar/zbar/decoder/: codabar.c  code128.c  code39.c  code93.c  databar.c  ean.c  i25.c  qr_finder.c
app/jni/libzbar/zbar/qrcode/: qrdec.c  qrdectxt.c
app/libs/: cmake.doc
app/sign/: https.jks
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CDebuger.cpp  CMakeLists.txt  NativeCrashHandler.cpp  StringUtil.cpp  boot.cpp  native-lib.cpp  native.cpp  web_task.cpp
app/src/main/cpp/Utils/: CDebuger.h  FileUtil.h  JsonUtil.h  StringUtil.h  log.h
app/src/main/cpp/network/: web_task.h
app/src/main/cpp/pkg/: AesUtil.cpp  CDebuger.cpp  CryptoUtils.cpp  NativeCrashHandler.cpp  StringUtil.cpp  base64.cpp  web_task.cpp
app/src/main/cpp/pkg/header/: AesUtil.h  Constant.h  CryptoUtils.h  base64.h  native.h  zbarjni.h
app/src/main/cpp/protobuf/: ProtoIO.cpp  ProtoIO.h  sample.pb.cc  sample.pb.h  sample.proto
app/src/main/java/: build.bat
app/src/main/java/com/vicky/libcurl/: AesUtils.java  App.java  MainActivity.java  counter.java
app/src/main/java/jni/: build.bat
app/src/main/java/jni/http/: CppProxy.java  JniApp.java  JniUtil.java
app/src/main/java/jni/http/Exception/: NativeCrashActivity.java  NativeCrashHandler.java  NativeError.java
app/src/main/java/jni/http/Proto/: UserProto.java
app/src/main/java/jni/http/Qrcode/zbar/: Config.java  Image.java  ImageScanner.java  Modifier.java  Orientation.java  Symbol.java  SymbolIterator.java  SymbolSet.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
save/: Readme.md  debug_command.txt
save/cpp/: MyBASE64.cpp  MyBASE64.h  MyMD5.cpp  MyRSA.cpp  MyRSA.h  native-lib.cpp
save/libjsoncpp/: jsoncpp.cpp
